@@ -8,8 +8,6 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_GCC_TRADITIONAL
 AC_AIX
-AC_ISC_POSIX
-AC_MINIX
 RL_VOID
 AC_HEADER_STDC
 CL_STDC_HEADERS
