@@ -27,10 +27,6 @@ dnl           checks for UNIX variants that set DEFS
 dnl
 AC_AIX
                       dnl DEFS _ALL_SOURCE
-AC_ISC_POSIX
-                      dnl DEFS _POSIX_SOURCE, LIBS
-AC_MINIX
-                      dnl DEFS _POSIX_SOURCE, _POSIX_1_SOURCE, _MINIX
 CL_CC_GCC
                       dnl sets variables CC_GCC, GCC_X_NONE
 CL_CC_CPLUSPLUS
