@@ -11,25 +11,6 @@
 #undef _ALL_SOURCE
 #endif
 
-/* AC_ISC_POSIX */
-/* Define if you need to in order for stat and other things to work. */
-#ifndef _POSIX_SOURCE
-#undef _POSIX_SOURCE
-#endif
-
-/* AC_MINIX */
-/* Define if you need to in order for stat and other things to work. */
-#ifndef _POSIX_SOURCE
-#undef _POSIX_SOURCE
-#endif
-/* Define if the system does not provide POSIX.1 features except
-   with this defined. */
-#ifndef _POSIX_1_SOURCE
-#undef _POSIX_1_SOURCE
-#endif
-/* Define if on MINIX. */
-#undef _MINIX
-
 /* CL_AS_UNDERSCORE */
 /* Define if C symbols are prefixed by an underscore in assembly language. */
 #undef ASM_UNDERSCORE
