@@ -1,5 +1,9 @@
 1999-08-14  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
+        Assume ISC and Minix are dead.
+        * configure.in: Don't call AC_ISC_POSIX and AC_MINIX.
+        * unixconf.h.in: Don't define _POSIX_SOURCE, _POSIX_1_SOURCE, _MINIX.
+
         Assume rename() is available.
         * aclocal.m4 (CL_RENAME): Don't test for rename.
         * unixconf.h.in: Don't define HAVE_RENAME.
